{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 33,
  "lineage": "bf906b9c-9a87-090d-e8f9-946817e950af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_nat-eip_8F768A4A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b751f4c830b313b3",
            "arn": "arn:aws:ec2:us-east-2:737026300147:elastic-ip/eipalloc-0b751f4c830b313b3",
            "domain": "vpc",
            "id": "eipalloc-0b751f4c830b313b3",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-14-48-120.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.48.120",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-nat-eip",
              "Project": "express-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-nat-eip",
              "Project": "express-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw_E5E304CC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:737026300147:internet-gateway/igw-013b9d47abf6f3161",
            "id": "igw-013b9d47abf6f3161",
            "owner_id": "737026300147",
            "region": "us-east-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-igw",
              "Project": "express-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-igw",
              "Project": "express-app"
            },
            "vpc_id": "vpc-0d026440800859862"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_88D76693",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:737026300147:loadbalancer/app/express-app-alb/ee44c4d8b93acc03",
            "arn_suffix": "app/express-app-alb/ee44c4d8b93acc03",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "express-app-alb-1085891765.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:737026300147:loadbalancer/app/express-app-alb/ee44c4d8b93acc03",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "express-app-alb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-0c7f1a56d291465e5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0121e22e04aa91e29"
              },
              {
                "subnet_id": "subnet-07d9b37fce7fba320"
              }
            ],
            "subnets": [
              "subnet-0121e22e04aa91e29",
              "subnet-07d9b37fce7fba320"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-alb",
              "Project": "express-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-alb",
              "Project": "express-app"
            },
            "vpc_id": "vpc-0d026440800859862",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:737026300147:loadbalancer/app/express-app-alb/ee44c4d8b93acc03"
          },
          "dependencies": [
            "aws_security_group.vpc_alb-sg_AC8B0A07",
            "aws_subnet.vpc_public-subnet-0_3BE467C6",
            "aws_subnet.vpc_public-subnet-1_B6E44E35",
            "aws_vpc.vpc_6776A399",
            "data.aws_availability_zones.vpc_azs_88BC7E4D"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_1B64D337",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:737026300147:listener/app/express-app-alb/ee44c4d8b93acc03/b4ab8c6222fb374f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:737026300147:targetgroup/express-app-alb-tg/5138f4e674ab04f1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:737026300147:listener/app/express-app-alb/ee44c4d8b93acc03/b4ab8c6222fb374f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:737026300147:loadbalancer/app/express-app-alb/ee44c4d8b93acc03",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Project": "express-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Project": "express-app"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:737026300147:listener/app/express-app-alb/ee44c4d8b93acc03/b4ab8c6222fb374f"
          },
          "dependencies": [
            "aws_lb.alb_88D76693",
            "aws_lb_target_group.alb_target-group_8180AAF8",
            "aws_security_group.vpc_alb-sg_AC8B0A07",
            "aws_subnet.vpc_public-subnet-0_3BE467C6",
            "aws_subnet.vpc_public-subnet-1_B6E44E35",
            "aws_vpc.vpc_6776A399",
            "data.aws_availability_zones.vpc_azs_88BC7E4D"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target-group_8180AAF8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:737026300147:targetgroup/express-app-alb-tg/5138f4e674ab04f1",
            "arn_suffix": "targetgroup/express-app-alb-tg/5138f4e674ab04f1",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:737026300147:targetgroup/express-app-alb-tg/5138f4e674ab04f1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "express-app-alb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-alb-tg",
              "Project": "express-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-alb-tg",
              "Project": "express-app"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d026440800859862"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:737026300147:targetgroup/express-app-alb-tg/5138f4e674ab04f1"
          },
          "dependencies": [
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc_nat-gateway_3C87A12B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b751f4c830b313b3",
            "association_id": "eipassoc-024b7a2d23de25932",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0c53db1a5728038ff",
            "network_interface_id": "eni-0e5c4baf41096387c",
            "private_ip": "10.0.0.12",
            "public_ip": "3.14.48.120",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07d9b37fce7fba320",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-nat-gateway",
              "Project": "express-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-nat-gateway",
              "Project": "express-app"
            },
            "vpc_id": "vpc-0d026440800859862"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vpc_nat-eip_8F768A4A",
            "aws_subnet.vpc_public-subnet-0_3BE467C6",
            "aws_vpc.vpc_6776A399",
            "data.aws_availability_zones.vpc_azs_88BC7E4D"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_private-route_8A8A4437",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05a030e228e26794c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c53db1a5728038ff",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-05a030e228e26794c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737026300147",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-05a030e228e26794c"
          },
          "dependencies": [
            "aws_eip.vpc_nat-eip_8F768A4A",
            "aws_nat_gateway.vpc_nat-gateway_3C87A12B",
            "aws_route_table.vpc_private-route-table_79B576F5",
            "aws_subnet.vpc_public-subnet-0_3BE467C6",
            "aws_vpc.vpc_6776A399",
            "data.aws_availability_zones.vpc_azs_88BC7E4D"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_public-route_F447845C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-013b9d47abf6f3161",
            "id": "r-rtb-02f10c6e2a0c7a2ad1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-02f10c6e2a0c7a2ad",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737026300147",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-02f10c6e2a0c7a2ad"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw_E5E304CC",
            "aws_route_table.vpc_public-route-table_38705DC2",
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_private-route-table_79B576F5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:737026300147:route-table/rtb-05a030e228e26794c",
            "id": "rtb-05a030e228e26794c",
            "owner_id": "737026300147",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-private-rt",
              "Project": "express-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-private-rt",
              "Project": "express-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d026440800859862"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737026300147",
            "id": "rtb-05a030e228e26794c",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_public-route-table_38705DC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:737026300147:route-table/rtb-02f10c6e2a0c7a2ad",
            "id": "rtb-02f10c6e2a0c7a2ad",
            "owner_id": "737026300147",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-public-rt",
              "Project": "express-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-public-rt",
              "Project": "express-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d026440800859862"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737026300147",
            "id": "rtb-02f10c6e2a0c7a2ad",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_private-rta-0_62B7EDDE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b5b6513af161dfc",
            "region": "us-east-2",
            "route_table_id": "rtb-05a030e228e26794c",
            "subnet_id": "subnet-051d6c70b8628f373"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_private-route-table_79B576F5",
            "aws_subnet.vpc_private-subnet-0_72D2B47A",
            "aws_vpc.vpc_6776A399",
            "data.aws_availability_zones.vpc_azs_88BC7E4D"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_private-rta-1_AE4E8325",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fca5763c830bb3e0",
            "region": "us-east-2",
            "route_table_id": "rtb-05a030e228e26794c",
            "subnet_id": "subnet-0767c23d21e19f148"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_private-route-table_79B576F5",
            "aws_subnet.vpc_private-subnet-1_FA2DCB12",
            "aws_vpc.vpc_6776A399",
            "data.aws_availability_zones.vpc_azs_88BC7E4D"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_public-rta-0_29284DFA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd440066e90f4b20",
            "region": "us-east-2",
            "route_table_id": "rtb-02f10c6e2a0c7a2ad",
            "subnet_id": "subnet-07d9b37fce7fba320"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_public-route-table_38705DC2",
            "aws_subnet.vpc_public-subnet-0_3BE467C6",
            "aws_vpc.vpc_6776A399",
            "data.aws_availability_zones.vpc_azs_88BC7E4D"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_public-rta-1_CA1395F4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071d94d160bb18d38",
            "region": "us-east-2",
            "route_table_id": "rtb-02f10c6e2a0c7a2ad",
            "subnet_id": "subnet-0121e22e04aa91e29"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_public-route-table_38705DC2",
            "aws_subnet.vpc_public-subnet-1_B6E44E35",
            "aws_vpc.vpc_6776A399",
            "data.aws_availability_zones.vpc_azs_88BC7E4D"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_alb-sg_AC8B0A07",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:737026300147:security-group/sg-0c7f1a56d291465e5",
            "description": "Security group for Application Load Balancer",
            "egress": [],
            "id": "sg-0c7f1a56d291465e5",
            "ingress": [],
            "name": "express-app-alb-sg",
            "name_prefix": "",
            "owner_id": "737026300147",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-alb-sg",
              "Project": "express-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-alb-sg",
              "Project": "express-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d026440800859862"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737026300147",
            "id": "sg-0c7f1a56d291465e5",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_ecs-sg_E58AE960",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:737026300147:security-group/sg-09dbd393d89fb8fb6",
            "description": "Security group for ECS tasks",
            "egress": [],
            "id": "sg-09dbd393d89fb8fb6",
            "ingress": [],
            "name": "express-app-ecs-sg",
            "name_prefix": "",
            "owner_id": "737026300147",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-ecs-sg",
              "Project": "express-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-ecs-sg",
              "Project": "express-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d026440800859862"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737026300147",
            "id": "sg-09dbd393d89fb8fb6",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_alb-egress_47C8258B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-3227516005",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-2",
            "security_group_id": "sg-0c7f1a56d291465e5",
            "security_group_rule_id": "sgr-0c48f5dc4de7fdd62",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_alb-sg_AC8B0A07",
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_alb-http-ingress_5A0176ED",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP from anywhere",
            "from_port": 80,
            "id": "sgrule-3571181744",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0c7f1a56d291465e5",
            "security_group_rule_id": "sgr-060e7919c1e6c535d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_alb-sg_AC8B0A07",
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_alb-https-ingress_4F37F646",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS from anywhere",
            "from_port": 443,
            "id": "sgrule-3963056859",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0c7f1a56d291465e5",
            "security_group_rule_id": "sgr-03d181f2cb5333c70",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_alb-sg_AC8B0A07",
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_ecs-alb-ingress_9ABDAE53",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow traffic from ALB",
            "from_port": 3000,
            "id": "sgrule-1124434127",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-09dbd393d89fb8fb6",
            "security_group_rule_id": "sgr-06ca596595e625436",
            "self": false,
            "source_security_group_id": "sg-0c7f1a56d291465e5",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_alb-sg_AC8B0A07",
            "aws_security_group.vpc_ecs-sg_E58AE960",
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_ecs-egress_BA2EB2C4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-282363699",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-2",
            "security_group_id": "sg-09dbd393d89fb8fb6",
            "security_group_rule_id": "sgr-0b2bdb140c550f050",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_ecs-sg_E58AE960",
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_private-subnet-0_72D2B47A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:737026300147:subnet/subnet-051d6c70b8628f373",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051d6c70b8628f373",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "737026300147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-private-subnet-1",
              "Project": "express-app",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-private-subnet-1",
              "Project": "express-app",
              "Type": "Private"
            },
            "vpc_id": "vpc-0d026440800859862"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737026300147",
            "id": "subnet-051d6c70b8628f373",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.vpc_6776A399",
            "data.aws_availability_zones.vpc_azs_88BC7E4D"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_private-subnet-1_FA2DCB12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:737026300147:subnet/subnet-0767c23d21e19f148",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0767c23d21e19f148",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "737026300147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-private-subnet-2",
              "Project": "express-app",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-private-subnet-2",
              "Project": "express-app",
              "Type": "Private"
            },
            "vpc_id": "vpc-0d026440800859862"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737026300147",
            "id": "subnet-0767c23d21e19f148",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.vpc_6776A399",
            "data.aws_availability_zones.vpc_azs_88BC7E4D"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_public-subnet-0_3BE467C6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:737026300147:subnet/subnet-07d9b37fce7fba320",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d9b37fce7fba320",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737026300147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-public-subnet-1",
              "Project": "express-app",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-public-subnet-1",
              "Project": "express-app",
              "Type": "Public"
            },
            "vpc_id": "vpc-0d026440800859862"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737026300147",
            "id": "subnet-07d9b37fce7fba320",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.vpc_6776A399",
            "data.aws_availability_zones.vpc_azs_88BC7E4D"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_public-subnet-1_B6E44E35",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:737026300147:subnet/subnet-0121e22e04aa91e29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0121e22e04aa91e29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737026300147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-public-subnet-2",
              "Project": "express-app",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-public-subnet-2",
              "Project": "express-app",
              "Type": "Public"
            },
            "vpc_id": "vpc-0d026440800859862"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737026300147",
            "id": "subnet-0121e22e04aa91e29",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.vpc_6776A399",
            "data.aws_availability_zones.vpc_azs_88BC7E4D"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_6776A399",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:737026300147:vpc/vpc-0d026440800859862",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f96c5dcf0564542",
            "default_route_table_id": "rtb-0d3bf996edc05f76a",
            "default_security_group_id": "sg-0676c73df7719012a",
            "dhcp_options_id": "dopt-02bef5e4b037391c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d026440800859862",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d3bf996edc05f76a",
            "owner_id": "737026300147",
            "region": "us-east-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-vpc",
              "Project": "express-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Name": "express-app-vpc",
              "Project": "express-app"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737026300147",
            "id": "vpc-0d026440800859862",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}